--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -4,54 +4,62 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
-    name: Build, Scan, and Push Docker Image
+    name: Build, Analyze, and Scan Docker Image
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install -y trivy
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Trivy scan
+        run: trivy fs .
 
-    - name: Install dependencies
-      run: npm install
+      - name: Build Docker image and Push
+        env:
+          DOCKER_CLI_ACL: 1
+        run: |
+          docker buildx build -t instruct.ai --secret id=dotenv,src=.env .
+          docker tag instruct.ai imarchit/instruct_ai:latest
+          echo ${{ secrets.DOCKER_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push imarchit/instruct_ai:latest
 
-    - name: Generate Prisma Client
-      run: npx prisma generate
+  deploy:
+    name: Deploy app to Docker
+    needs: build
+    runs-on: ubuntu-latest
 
-    - name: Build Docker image
-      run: docker buildx build --tag imarchit/instruct_ai:latest .
+    steps:
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install -y trivy
 
-    - name: Install Trivy
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y wget apt-transport-https gnupg lsb-release
-        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -cs) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
-        sudo apt-get update
-        sudo apt-get install -y trivy
+      - name: Docker pull
+        run: docker pull imarchit/instruct_ai:latest
 
-    - name: Run Trivy scan on Docker image
-      run: trivy image --exit-code 1 --severity HIGH,CRITICAL imarchit/instruct_ai:latest
+      - name: Image scan
+        run: trivy image imarchit/instruct_ai:latest > image-trivy-scan.txt
 
-    - name: Push Docker image
-      if: success() # Only push if the Trivy scan passes
-      run: docker buildx build --push --tag imarchit/instruct_ai:latest .
+      - name: Run Docker container
+        run: docker run -itd -p 3000:3000 --env-file .env imarchit/instruct_ai:latest
